[package]
name = "rtdp"
version = "0.1.0"
authors = ["Shuwa Miura <mana_burn_vo@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.7.0"
mdp = { path = "../mdp" }
# epower = { path = "../epower" }
#multi_objective_mdp = { path = "../multi-objective-mdp" }

[profile.release]
debug = 1

# [[bin]]
# name = "rtdpn_search_rescue"
# path = "bin/rtdpn/rtdpn_search_rescue.rs"

# [[bin]]
# name = "rtdpn_grid_world"
# path = "bin/rtdpn/rtdpn_grid_world.rs"
# 
[[bin]]
name = "rtdp_race_track"
path = "bin/rtdp/rtdp_race_track.rs"
