[package]
name = "mcts"
version = "0.1.0"
authors = ["Shuwa Miura <mana_burn_vo@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.7.0"
mdp = { path = "../mdp" }
log = "0.4.0"
env_logger = "0.8.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mcts_blocks"
harness = false