[package]
name = "oamdp"
version = "0.1.0"
authors = ["Shuwa Miura <mana_burn_vo@yahoo.co.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = 1

[dependencies]
num-traits = "0.2"
ordered-float = { version = "2.8.0", features = ["serde"] }
assert_approx_eq = "1.1.0"
gnuplot = "0.0.37"
itertools = "0.8.0"
arraymap = "0.1.1"
tiny-skia = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.11.0"
serde_arrays = "0.1.0"
strum = "0.15.0"
strum_macros = "0.15.0"
bson = "0.14.0"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
mdp = { path = "../mdp" }
rtdp = { path = "../rtdp" }
mcts = { path = "../mcts" }
criterion = "0.3"
env_logger = "0.8.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4.0"

[[bin]]
name = "mcts"
path = "src/bin/mcts.rs"

[[bin]]
name = "grid_vi"
path = "src/bin/grid_vi.rs"

[[bin]]
name = "rtdp"
path = "src/bin/rtdp.rs"

[[bench]]
name = "get_next_states"
harness = false

[[bench]]
name = "mcts_oamdp"
harness = false

[[bench]]
name = "rtdp_baker"
harness = false